# emoa-multistruct

./: CMakeLists.txt  README.md  change.txt  orig.txt  orig_out_test.txt  tmp.txt  tmp_orig.txt
data/: ex1-c1.gr  result.txt
data/ToMaya/ToMaya/: 3obj  4obj  5obj
include/: api.hpp  emoa.hpp  our_frontier.hpp
python/: reformat_maya.py
source/: emoa.cpp  graph_io.cpp  our_frontier.cpp
test/: run_emoa.cpp  test_emoa.cpp
